# zp-test-probe-dspic

./: .gitignore  AGENTS.md  AGENTS.md.old  CLAUDE.md  CMakeLists.txt  FreeRTOSConfig.h  README.md  flash.ps1
FreeRTOS/Source/portable/MPLAB/PIC24_dsPIC/: port.c  portmacro.h
cmake/pwr-probe-test/default/: CMakePresets.json  user.cmake
cmake/pwr-probe-test/default.production/: CMakeLists.txt  CMakePresets.json  user.cmake
cmake/pwr-probe-test/default.production/.generated/: cmake-hash.json  exported.cmake  file.cmake  main.cmake  rule.cmake
cmake/pwr-probe-test/default/.generated/: cmake-hash.json  exported.cmake  file.cmake  main.cmake  rule.cmake
include/: sound_protocol.h
src/: bcd_switch.c  bcd_switch.h  display_hw.c  display_hw.h  fonts.c  fonts.h  gfx_plotter.c  gfx_plotter.h  hardware.h  main.c  motor.c  motor.h  pager.c  pager.h  project_clock.h  pwm.c  pwm.h  rgbw.c  rgbw.h  sensors.c  sensors.h  st7789v.c  st7789v.h  st7789v_demo.c  st7789v_demo.h.deprecated  startup_logo.h  trollface_image.h  uart.c  uart.h
tools/: png2h.py
